[package]
name = "urlencoding"
version = "1.1.1"
authors = ["Bertram Truong <b@bertramtruong.com>", "Kornel <kornel@geekhood.net>"]
categories = ["encoding", "web-programming"]
description = "A Rust library for doing URL percentage encoding."
homepage = "https://lib.rs/urlencoding"
keywords = ["url", "percent", "escape", "urlencode", "urldecode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kornelski/rust_urlencoding"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
